web-design homework

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" media="screen" >
-    <title>Latitude - Latitude Analysis Dashboard with Attitude!</title>
+    <title>Latitude - Latitude Analysis Dashboard with Attitude</title>
   </head>
   <body>
  
@@ -49,38 +49,43 @@
         </div>
       </nav>
 <div class = "container">
-  <div class = "row">
+<div class = "row">
 
-    <div class = "col-md-8">
-        <h3> Cloudiness</h3>
-    <img class = "leftimage" src="assets/images/Fig3.png"/>
-    Shelly Fischer visualization 
+<div class = "col-md-8">
+    <h3> Summary:  Latitude vs. X</h3>
+<img class = "leftimage" src="assets/images/Fig1.png"/>
+Shelly Fischer visualization 
+</div>
+<div class = "col-md-4">
+    <h4> Summary:  Visualization</h4>
+    <div class = "row">
+        <div class = "col-md-6"> 
+            <a href = "temp.html"> <img class = "rightimage" src="assets/images/Fig1.png"/></a>
+        </div> 
+        <div class = "col-md-6">
+          <a href = "humidity.html"> <img class = "rightimage" src="assets/images/Fig2.png"/></a>
+        </div> 
     </div>
-    <div class = "col-md-4">
-        <h4> Summary:  Visualization</h4>
-        <div class = "row">
-            <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig1.png"/>
-            </div> 
-            <div class = "col-md-6">
-                <img class = "rightimage" src="assets/images/Fig2.png"/>
-            </div> 
-        </div>
-        <div class = "row">
-            <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig3.png"/>
-            </div> 
-            <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig4.png"/>
-            </div> 
-        </div>
-    
-    
+    <div class = "row">
+        <div class = "col-md-6"> 
+          <a href = "cloudiness.html"> <img class = "rightimage" src="assets/images/Fig3.png"/></a>
+        </div> 
+        <div class = "col-md-6"> 
+          <a href = "windspeed.html"> <img class = "rightimage" src="assets/images/Fig4.png"/></a>
+        </div> 
     </div>
-    </div>
+
+
+</div>
+</div>
 
 </div>
 
 </body>
 </html>
 
+
+
+
+
+  
