--- a/cloudiness.html
+++ b/cloudiness.html
@@ -52,27 +52,27 @@
   <div class = "row">
 
     <div class = "col-md-8">
-        <h3> Max Temperature</h3>
-    <img class = "leftimage" src="assets/images/Fig1.png"/>
+        <h3> Cloudiness</h3>
+    <img class = "leftimage" src="assets/images/Fig3.png"/>
     Shelly Fischer visualization 
     </div>
     <div class = "col-md-4">
         <h4> Summary:  Visualization</h4>
         <div class = "row">
             <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig1.png"/>
+              <a href = "temp.html"> <img class = "rightimage" src="assets/images/Fig1.png"/></a>
             </div> 
             <div class = "col-md-6">
-                <img class = "rightimage" src="assets/images/Fig2.png"/>
+              <a href = "humidity.html"> <img class = "rightimage" src="assets/images/Fig2.png"/></a>
             </div> 
         </div>
         <div class = "row">
             <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig3.png"/>
+              <a href = "cloudiness.html"> <img class = "rightimage" src="assets/images/Fig3.png"/></a>
             </div> 
             <div class = "col-md-6"> 
-                <img class = "rightimage" src="assets/images/Fig4.png"/>
-            </div> 
+              <a href = "windspeed.html"> <img class = "rightimage" src="assets/images/Fig4.png"/></a>
+              </div> 
         </div>
     
     
